--- a/app/src/main/res/layout/activity_activity2.xml
+++ b/app/src/main/res/layout/activity_activity2.xml
@@ -25,7 +25,7 @@
      </RelativeLayout>
 
 
-     < RelativeLayout
+     <RelativeLayout
         android:orientation="horizontal"
         android:layout_height="100dp"
         android:layout_width="80dp"
@@ -75,7 +75,8 @@
         android:id="@+id/winlooseText"
         android:textAlignment="center"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"/>
 
 
 </RelativeLayout>
